0.02	25 Feb 2018 - H.Merijn Brand
    * It's 2016
    * Small changes to dashboard script
    * It's 2017
    * It's 2018
    * Update .perlcriticrc
    * Add -Duselongdouble example

0.01	18 Aug 2015 - H.Merijn Brand
    * First release