@@ -5,6 +5,7 @@
     * It's 2018
     * Update .perlcriticrc
     * Add -Duselongdouble example
+    * Updated makewww.pl
 
 0.01	18 Aug 2015 - H.Merijn Brand
     * First release
